# center-of-gravity

./: .gitignore  HOW_TO_RELEASE.md  README.md  pyproject.toml
.github/workflows/: docs.yml  release-pypi.yml
_notes/: sphinx.md
docs_src/: conf.py  index.rst
notebooks/: 241124_チーバくん画像.ipynb  241206_国土地理院データ解析.ipynb
tests/: test_import.py
