# https://packaging.python.org/ja/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "center-of-gravity"
dynamic = ["version"]
dependencies = []
requires-python = ">= 3.7"
authors = [{ name = "yu9824" }]
maintainers = [{ name = "yu9824" }]
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = []
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
] # https://pypi.org/classifiers/

[project.optional-dependencies]
test = ["pytest"]
dev = ["build"]
optional = ["colorlog", "tqdm"]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-markdown-tables", "recommonmark"]
gui = ["TkEasyGUI"]

[project.urls]
Homepage = "https://github.com/yu9824/center-of-gravity"
# Documentation = "https://readthedocs.org"
PyPI = "https://pypi.org/project/center-of-gravity/"
Source = "https://github.com/yu9824/center-of-gravity"
Tracker = "https://github.com/yu9824/center-of-gravity/issues"
Changelog = "https://github.com/yu9824/center-of-gravity/blob/main/CHANGELOG.md"

[project.scripts]
center-of-gravity = "center_of_gravity.__main__:entrypoint"

# [project.gui-scripts]
# center-of-gravity-gui = "center_of_gravity:main_gui"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "center_of_gravity.__version__" }

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
unfixable = ["F401"]
